Fixing the overflow of the menu container on large screens
this fixes clicking + scrolling when browsing with very wide screens.

Ref: https://mastodon.social/@MaybeFrederick/116119705458440970

/cc @vanbrabantf

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -34,11 +34,6 @@ a {
     background-color: #373A47;
 }
 
-.menu-wrap {
-    float: right;
-    width: 20%
-}
-
 .menu-fixed {
     position: relative;
     z-index: 1000
